...
    <item
        android:id="@+id/HomepageFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="Home"
        />
    <item
        android:id="@+id/AddFragment"
        android:icon="@drawable/baseline_photo_camera_24"
        android:title="Make a post"
        />
    <item
        android:id="@+id/DiscoverFragment"
        android:icon="@drawable/baseline_auto_awesome_mosaic_24"
        android:title="Discover"
        />
    <item
        android:id="@+id/ProfileFragment"
        android:icon="@drawable/baseline_account_box_24"
        android:title="Profile"
        />


</menu>
