<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    tools:context=".view.CameraFragment">

    <Button
        android:id="@+id/reTakeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="295dp"
        android:layout_marginBottom="20dp"
        android:text="Retake photo"/>

<Button
    android:id="@+id/postButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="295dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="7dp"
    android:layout_marginBottom="20dp"
    android:text="Post"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="200dp"/>

    <EditText
        android:id="@+id/addTag"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_add"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:hint="Add Tag"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_add"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="30dp"
        />





</RelativeLayout>