...
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    tools:context=".view.ProfileFragment">


    <ImageButton
        android:id="@+id/drop_down_button"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="295dp"
        android:layout_marginTop="30dp"
...
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/delete_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomNavigationView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:background="#00000000"
        android:src="@drawable/baseline_delete_24" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
...
