<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings_button"
        android:title="Settings" />
    <item
        android:id="@+id/logout_button"
        android:title="Logout" />
    <!-- Add more menu items as needed -->
</menu>